--- a/Exam-3B1/StyleSheet.css
+++ b/Exam-3B1/StyleSheet.css
@@ -18,8 +18,30 @@ aside{float:right;
       width:70%;
       align-content:center;
 }
-content{align-content:center;}
+content{text-align:center;}
 
 footer{text-align:center;
        font-style:italic;
+}
+
+table, th, td {
+   border: 1px solid black;
+}
+
+table {
+    width: 60%;
+    border-collapse:collapse;
+}
+
+th {
+    height: 50%;
+}
+
+td {
+    padding: 15px;
+}
+
+table.center{
+    margin-left:auto;
+    margin-right:auto;
 }
