--- a/Exam-3B1/StyleSheet.css
+++ b/Exam-3B1/StyleSheet.css
@@ -1,4 +1,4 @@
-﻿body {
+﻿body {background-color:lightgray;
 }
 
 h1{text-align:center;}
@@ -25,12 +25,13 @@ footer{text-align:center;
 }
 
 table, th, td {
-   border: 1px solid black;
+   border: 2px solid black;
 }
 
 table {
     width: 60%;
     border-collapse:collapse;
+    background-color:azure;
 }
 
 th {
@@ -44,4 +45,9 @@ td {
 table.center{
     margin-left:auto;
     margin-right:auto;
+}
+
+.rfv{
+    color:red;
+    font-weight:bold;
 }
